<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.waterpoloscorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_foul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:text="0"
                    android:textColor="@color/colorFoul"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorButtonNormal"
                    android:onClick="addOneForTeamA"
                    android:text="@string/point"
                    android:textColor="@color/colorButtonText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorButtonNormal"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/foul"
                    android:textColor="@color/colorButtonText" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context="com.example.android.waterpoloscorekeeper.MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/visitor"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_foul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="right"
                    android:text="0"
                    android:textColor="@color/colorFoul"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/colorButtonNormal"
                    android:onClick="addOneForTeamB"
                    android:text="@string/point"
                    android:textColor="@color/colorButtonText" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorButtonNormal"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/foul"
                    android:textColor="@color/colorButtonText" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resetButton"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/timer"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:backgroundTint="@color/colorButtonNormal"
                android:onClick="startButton"
                android:text="@string/start"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timer"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/startButton"
                android:backgroundTint="@color/colorButtonNormal"
                android:onClick="stopButton"
                android:text="@string/stop"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timer"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/resumeButton"
                android:backgroundTint="@color/colorButtonNormal"
                android:onClick="pauseButton"
                android:text="@string/pause"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/resumeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/timer"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorButtonNormal"
                android:onClick="resumeButton"
                android:text="@string/resume"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorButtonNormal"
                android:onClick="resetTeam"
                android:text="@string/reset"
                android:textColor="@color/colorButtonText" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>